Bug 118203 - measure lines (dimension line) have no value
Summary: measure lines (dimension line) have no value
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-AW080
  Show dependency treegraph
 
Reported: 2018-06-16 22:16 UTC by Regina Henschel
Modified: 2018-09-17 09:28 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-06-16 22:16:21 UTC
Start build from current master with Draw.
Draw a measure line (dimension line).
Notice, that the measure line shows no value.

If such document is saved, the <text:measure> elements are missing.

I see the error in Version: 6.2.0.0.alpha0+ (x64)
Build ID: 2c85607101e2e04e870e3b87362f39f9a9148e6c
CPU threads: 8; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-06-16_00:12:37
Locale: de-DE (de_DE); Calc: CL

It was OK in Version: 6.2.0.0.alpha0+ (x64)
Build ID: f7f2d03bd6f5aa5dcd0f7976b4a7f2db278c2f03
CPU threads: 8; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-25_05:00:28
Locale: de-DE (de_DE); Calc: CL

It is OK in released versions.
Comment 1 raal 2018-06-17 09:26:12 UTC
I can confirm with Version: 6.2.0.0.alpha0+
Build ID: c4c56de1b0e62ec866b519b2b24c5e805f0a86d3
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3;
Comment 2 raal 2018-06-17 18:13:56 UTC
This seems to have begun at the below commit.
Adding Cc: to Armin Le Grand and  Noel Grandin; Could you possibly take a look at this one?
Thanks
 34b63425ed12b2c68557db3870f1f9c6ad90f1cf is the first bad commit
commit 34b63425ed12b2c68557db3870f1f9c6ad90f1cf
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jun 4 21:07:06 2018 +0200

    source 726d7e7b8b50dca9914329dbfd9491f7c8961f68
    
    source 726d7e7b8b50dca9914329dbfd9491f7c8961f68
    source a28a839b9f9eeec1544c5ceeeabe7b1083ce1655
    source 4b4942224b550235da228655677b5c068a053254

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-05-25 12:58:10 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-05-25 12:59:48 +0200
commit 726d7e7b8b50dca9914329dbfd9491f7c8961f68 (patch)
tree aba7b05720e84dc38dabe93f6a51825326c2a7be
parent a28a839b9f9eeec1544c5ceeeabe7b1083ce1655 (diff)
tdf#117629: Remove again after next step of SOSAW080 is done
Change-Id: I837b20b3334dbb7f241af31c5fa5b702f1df8742

author	Noel Grandin <noelgrandin@gmail.com>	2018-05-24 21:43:08 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-05-25 12:34:37 +0200
commit a28a839b9f9eeec1544c5ceeeabe7b1083ce1655 (patch)
tree 6e2fe3813a9a9d51429c10c97f22b5cee399d3a6
parent 4b4942224b550235da228655677b5c068a053254 (diff)
no need declare these tag structs separately

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-04-16 22:34:50 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-05-25 12:31:32 +0200
commit 4b4942224b550235da228655677b5c068a053254 (patch)
tree a660a04a1f7a3eee910da780ece271d68942201d
parent f8edef392245c292398a80f6a858ca19f32df9c3 (diff)
SOSAW080: Derive SdrObjGroup from SdrObjList
Comment 3 Xisco Faulí 2018-07-03 00:58:57 UTC
Most likely it's 4b4942224b550235da228655677b5c068a053254. Adding bisected
Comment 4 Maxim Monastirsky 2018-08-21 20:09:28 UTC
*** Bug 119403 has been marked as a duplicate of this bug. ***
Comment 5 Armin Le Grand (collabora) 2018-09-15 16:48:50 UTC
Looks as if in MeasureProperties::SetStyleSheet the call to UndirtyText causes a endless loop: It calls-back the CalcFieldValueHandler, that tries to get the SfxItemSet which is not yet initialized and will call MeasureProperties::SetStyleSheet again to init the StyleSheet for the to-be-set SfxItemSet (that again calls UndirtyText...).
Should be fixable by 1st calling parent in MeasureProperties::SetStyleSheet what will already create the needed SfxItemSet - first beed to update master...
Comment 6 Armin Le Grand (collabora) 2018-09-16 08:51:15 UTC
1st fix on gerrit: https://gerrit.libreoffice.org/#/c/60546/
Comment 7 Commit Notification 2018-09-16 15:53:56 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d357e50fa1734da0bf341dbd49fc0596011bdfe3

tdf#118203 Avoid endless recussion in MeasureObject

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-09-17 09:11:04 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 2419fa71d8b2223a50f596d5db7721f6213d4f87
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 9 Commit Notification 2018-09-17 09:28:48 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3fa7c4e04c489f8d8ec6db3385e965900d801a3&h=libreoffice-6-1

tdf#118203 Avoid endless recussion in MeasureObject

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.