tdf#118203 Avoid endless recussion in MeasureObject

Change-Id: I1e6fff80e7b6d36830f61387cc5245fc54877d95
Reviewed-on: https://gerrit.libreoffice.org/60546
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>