svx/source/sdr/properties/measureproperties.cxx
@@ -88,15 +88,15 @@ namespace sdr
             // get access to dimension line object
             SdrMeasureObj& rObj = static_cast<SdrMeasureObj&>(GetSdrObject());
 
+            // call parent
+            TextProperties::SetStyleSheet(pNewStyleSheet, bDontRemoveHardAttr);
+
             // local changes
 
             // mark dimension line text as changed (dirty) in the dimension line object
             rObj.SetTextDirty();
             // tdf#98525 ask the dimension line object to redraw the changed text
             rObj.UndirtyText();
-
-            // call parent
-            TextProperties::SetStyleSheet(pNewStyleSheet, bDontRemoveHardAttr);
         }
 
         void MeasureProperties::ForceDefaultAttributes()
